# cv-ANPR-system

./: README.md  pyproject.toml  requirements.txt  yolo2_multi_guardrails.py
configs/: default.yaml
input/: .gitkeep
models/: .gitkeep
output/: .gitkeep
scripts/: benchmark.py  export_onnx.py
yolo_ocr/: __init__.py  api.py  cli.py  config.py
yolo_ocr/detectors/: __init__.py  base.py  yolo_onnx.py  yolo_tensorrt.py  yolo_ultralytics.py
yolo_ocr/ocr/: __init__.py  base.py  gpt_ocr.py  paddle_ocr.py  tesseract_ocr.py  trocr_hf.py
yolo_ocr/pipeline/: __init__.py  pipeline.py  postprocess.py  tracker.py
yolo_ocr/utils/: __init__.py  io.py  timing.py  vis.py
